--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tippy</title>
+    <title>Overlay Scrollbars</title>
     <link
       rel="stylesheet"
       href="https://unpkg.com/tippy.js@6/themes/light.css"
@@ -13,45 +13,60 @@
       rel="stylesheet"
       href="https://unpkg.com/tippy.js@6/animations/scale.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/overlayscrollbars/1.13.1/css/OverlayScrollbars.min.css"
+      integrity="sha512-jN4O0AUkRmE6Jwc8la2I5iBmS+tCDcfUd1eq8nrZIBnDKTmCp5YxxNN1/aetnAH32qT+dDbk1aGhhoaw5cJNlw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <style>
+      * {
+        box-sizing: border-box;
+      }
       body {
-        font-family: Arial, Helvetica, sans-serif;
-        text-align: center;
+        margin: 0;
       }
       header {
-        height: 100vh;
-        background-color: mediumslateblue;
-        vertical-align: middle;
-        display: flex;
+        background-color: mediumorchid;
+        color: white;
         flex-direction: column;
+      }
+      section,
+      header {
+        padding: 4rem, 1rem;
+        text-align: center;
+        min-height: 100vh;
+        display: flex;
         justify-content: center;
+        align-items: center;
+      }
+      .actions {
+        display: flex;
+        gap: 1rem;
+      }
+      @media (min-width: 767px) {
+        .actions {
+          justify-content: center;
+        }
       }
       h1 {
-        color: white;
+        font-family: Arial, Helvetica, sans-serif;
       }
+      .actions > * {
+        flex-shrink: 0;
+      }
+      a,
       button {
-        background-color: rgb(255, 241, 221);
-        padding: 1rem;
-        margin: 0.5rem;
-        text-transform: uppercase;
+        color: black;
+        background-color: moccasin;
+        padding: 1rem 1.2rem;
         border: none;
-        cursor: pointer;
-      }
-      a {
-        display: inline-block;
-        background-color: rgb(255, 241, 221);
-        padding: 1rem;
-        margin: 0.5rem;
         text-transform: uppercase;
-        border: none;
-        cursor: pointer;
-        text-decoration: none;
-      }
-      section {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        height: 100vh;
+        outline: none;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: 400;
+        font-size: 1rem;
       }
       button:hover {
         background-color: navajowhite;
@@ -62,27 +77,33 @@
       .tippy-box[data-theme~="light"] {
         color: red;
       }
+      .overlay {
+        width: 100%;
+        overflow: hidden;
+      }
     </style>
   </head>
 
   <body>
     <header id="top">
       <h1>Hello MoveTo</h1>
-      <div class="actions">
-        <button
-          data-target="#features"
-          data-tippy-content="Tooltip that works great"
-        >
-          Our Features
-        </button>
-        <button
-          data-target="#contacts"
-          data-mt-duration="1500"
-          data-tippy-content="Another Tooltip"
-        >
-          Contacts
-        </button>
-        <a href="#map">Map</a>
+      <div class="overlay">
+        <div class="actions">
+          <button
+            data-target="#features"
+            data-tippy-content="Tooltip that works great"
+          >
+            Our Features
+          </button>
+          <button
+            data-target="#contacts"
+            data-mt-duration="1500"
+            data-tippy-content="Another Tooltip"
+          >
+            Contacts
+          </button>
+          <a href="#map">Map</a>
+        </div>
       </div>
     </header>
     <section id="features">
@@ -99,6 +120,12 @@
         <button data-target="#top" data-mt-duration="1500">Go Top</button>
       </div>
     </section>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/overlayscrollbars/1.13.1/js/OverlayScrollbars.min.js"
+      integrity="sha512-B1xv1CqZlvaOobTbSiJWbRO2iM0iii3wQ/LWnXWJJxKfvIRRJa910sVmyZeOrvI854sLDsFCuFHh4urASj+qgw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script src="https://unpkg.com/@popperjs/core@2"></script>
     <script src="https://unpkg.com/tippy.js@6"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moveTo/1.8.2/moveTo.min.js"></script>
